--- a/resources/style.css
+++ b/resources/style.css
@@ -1,4 +1,33 @@
-#tophat {
+body {
+	background-color: black;
+	font-family: Verdana, sans-serif;
+	color: white;
 	text-align: center;
+}
+
+h2 {
+	font-size: 42px;
+	font-weight: 300;
+}
+
+.tophat {
 	font-size: 50px;
+	display: block;
+	font-weight: normal;
+}
+
+.dload {
+	color: aquamarine;
+	font-size: 16px;
+}
+
+.summary {
+	color: gray;
+	font-size: 21px;
+}
+
+.footer {
+	text-align: right;
+	font-size: 15px;
+	color: gray;
 }
